--- a/Parte-1/index.html
+++ b/Parte-1/index.html
@@ -24,7 +24,7 @@
       <div class="container">
         <h1 class="text-center my-3">JGL WI-FI Analyzer</h1>
       </div>
-      <div class="container-fluid justify-content-start">
+      <div class="container justify-content-start">
         <button class="btn btn-outline-success" type="submit">
           <i class="fa-solid fa-play"></i>
         </button>
@@ -35,10 +35,68 @@
             placeholder="Search"
             aria-label="Search"
           />
-          <button class="btn btn-outline-success" type="submit">Search</button>
+          <button class="btn btn-outline-success ms-4" type="submit">
+            <i class="fa-solid fa-magnifying-glass"></i>
+          </button>
+          <button class="btn btn-outline-success ms-4" type="submit">
+            2.4GHz <i class="fa-solid fa-wifi"></i>
+          </button>
+          <button class="btn btn-outline-success ms-4" type="submit">
+            5.0GHz <i class="fa-solid fa-wifi"></i>
+          </button>
         </form>
       </div>
     </nav>
+    <div class="container text-center">
+        <div class="row align-items-start">
+          <div class="col">
+            <table class="table">
+              <thead>
+                <tr>
+                  <th scope="col">SSID</th>
+                  <th scope="col">RSSI</th>
+                  <th scope="col">CHANNEL</th>
+                  <th scope="col">BAND</th>
+                  <th scope="col">MAX RATE</th>
+                  <th scope="col">WIDTH</th>
+                </tr>
+              </thead>
+              <tbody class="table-group-divider">
+                <tr>
+                  <td>WI-FI GUILHERME</td>
+                  <td>-82</td>
+                  <td>4</td>
+                  <td>
+                    2.4GHz <i class="fa-solid fa-wifi"></i>
+                  </td>
+                  <td>200</td>
+                  <td>40</td>
+                </tr>
+                <tr>
+                  <td>LEO NET</td>
+                  <td>-60</td>
+                  <td>7</td>
+                  <td>
+                    5.0 GHz <i class="fa-solid fa-wifi"></i>
+                  </td>
+                  <td>186</td>
+                  <td>40</td>
+                </tr>
+                <tr>
+                  <td>JACKSON WI-FI</td>
+                  <td>-30</td>
+                  <td>6</td>
+                  <td>
+                    2.4GHz <i class="fa-solid fa-wifi"></i>
+                  </td>
+                  <td>174</td>
+                  <td>20</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
