--- a/Parte-1/index.html
+++ b/Parte-1/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Bootstrap demo</title>
+    <title>JGL WI-FI Analyzer</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -38,10 +38,10 @@
           <button class="btn btn-outline-success ms-4" type="submit">
             <i class="fa-solid fa-magnifying-glass"></i>
           </button>
-          <button class="btn btn-outline-success ms-4" type="submit">
+          <button class="btn btn-outline-success ms-4" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasBottom" aria-controls="offcanvasBottom">
             2.4GHz <i class="fa-solid fa-wifi"></i>
           </button>
-          <button class="btn btn-outline-success ms-4" type="submit">
+          <button class="btn btn-outline-success ms-4" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasBottom" aria-controls="offcanvasBottom">
             5.0GHz <i class="fa-solid fa-wifi"></i>
           </button>
         </form>
@@ -96,7 +96,25 @@
             </table>
           </div>
         </div>
+        <div class="offcanvas offcanvas-bottom" tabindex="-1" id="offcanvasBottom" aria-labelledby="offcanvasBottomLabel">
+        <div class="offcanvas-header">
+          <h5 class="offcanvas-title" id="offcanvasBottomLabel">Grafico 2.4GHz</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+        </div>
+        <div class="offcanvas-body small">
+          <img src="img/grafico.jpg" class="img"  alt="grafico-2.4GHz"/>
+        </div>
       </div>
+      <div class="offcanvas offcanvas-bottom" tabindex="-1" id="offcanvasBottom" aria-labelledby="offcanvasBottomLabel">
+        <div class="offcanvas-header">
+          <h5 class="offcanvas-title" id="offcanvasBottomLabel">Grafico 5.0GHz</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+        </div>
+        <div class="offcanvas-body small">
+          <img src="img/grafico.jpg" class="img-fluid"  alt="grafico-5.0GHz"/>
+        </div>
+      </div>
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
