--- a/Parte-1/index.html
+++ b/Parte-1/index.html
@@ -38,10 +38,10 @@
           <button class="btn btn-outline-success ms-4" type="submit">
             <i class="fa-solid fa-magnifying-glass"></i>
           </button>
-          <button class="btn btn-outline-success ms-4" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasBottom" aria-controls="offcanvasBottom">
+          <button class="btn btn-outline-success ms-4" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasBottom24" aria-controls="offcanvasBottom">
             2.4GHz <i class="fa-solid fa-wifi"></i>
           </button>
-          <button class="btn btn-outline-success ms-4" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasBottom" aria-controls="offcanvasBottom">
+          <button class="btn btn-outline-success ms-4" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasBottom50" aria-controls="offcanvasBottom">
             5.0GHz <i class="fa-solid fa-wifi"></i>
           </button>
         </form>
@@ -96,24 +96,24 @@
             </table>
           </div>
         </div>
-        <div class="offcanvas offcanvas-bottom" tabindex="-1" id="offcanvasBottom" aria-labelledby="offcanvasBottomLabel">
-        <div class="offcanvas-header">
-          <h5 class="offcanvas-title" id="offcanvasBottomLabel">Grafico 2.4GHz</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+        <div class="offcanvas offcanvas-bottom" tabindex="-1" id="offcanvasBottom24" aria-labelledby="offcanvasBottomLabel">
+          <div class="offcanvas-header">
+            <h5 class="offcanvas-title" id="offcanvasBottomLabel">Grafico 2.4GHz</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+          </div>
+          <div class="offcanvas-body">
+            <img src="img/grafico.jpg" class="img"  alt="grafico-2.4GHz"/>
+          </div>
         </div>
-        <div class="offcanvas-body small">
-          <img src="img/grafico.jpg" class="img"  alt="grafico-2.4GHz"/>
+        <div class="offcanvas offcanvas-bottom" tabindex="-1" id="offcanvasBottom50" aria-labelledby="offcanvasBottomLabel">
+          <div class="offcanvas-header">
+            <h5 class="offcanvas-title" id="offcanvasBottomLabel">Grafico 5.0GHz</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+          </div>
+          <div class="offcanvas-body">
+            <img src="img/grafico.jpg" class="img-fluid"  alt="grafico-5.0GHz"/>
+          </div>
         </div>
-      </div>
-      <div class="offcanvas offcanvas-bottom" tabindex="-1" id="offcanvasBottom" aria-labelledby="offcanvasBottomLabel">
-        <div class="offcanvas-header">
-          <h5 class="offcanvas-title" id="offcanvasBottomLabel">Grafico 5.0GHz</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-        </div>
-        <div class="offcanvas-body small">
-          <img src="img/grafico.jpg" class="img-fluid"  alt="grafico-5.0GHz"/>
-        </div>
-      </div>
     </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
