--- a/Parte-1/index.html
+++ b/Parte-1/index.html
@@ -76,6 +76,9 @@
               <div class="modal-footer">
                 <a href="client/index.html">Cadastre-se</a>
               </div>
+              <div class="modal-footer">
+                <a href="home.html">Teste home</a>
+              </div>
             </div>
           </div>
         </div>
@@ -95,7 +98,8 @@
                   <th scope="col">WIDTH</th>
                 </tr>
               </thead>
-              <tbody class="table-group-divider">
+              <tbody class="table-group-divider"></tbody>
+              <!-- <tbody class="table-group-divider">
                 <tr>
                   <td>WI-FI GUILHERME</td>
                   <td>-82</td>
@@ -126,7 +130,7 @@
                   <td>174</td>
                   <td>20</td>
                 </tr>
-              </tbody>
+              </tbody> -->
             </table>
           </div>
         </div>
@@ -154,5 +158,6 @@
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
       crossorigin="anonymous"
     ></script>
+    <script src="./js/main.js" type="module"></script>
   </body>
 </html>
