--- a/Parte-1/index.html
+++ b/Parte-1/index.html
@@ -76,9 +76,6 @@
               <div class="modal-footer">
                 <a href="client/index.html">Cadastre-se</a>
               </div>
-              <div class="modal-footer">
-                <a href="home.html">Teste home</a>
-              </div>
             </div>
           </div>
         </div>
@@ -158,6 +155,6 @@
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
       crossorigin="anonymous"
     ></script>
-    <script src="./js/main.js" type="module"></script>
+    <script src="js/main.js" type="module"></script>
   </body>
 </html>
