--- a/Parte-1/index.html
+++ b/Parte-1/index.html
@@ -95,8 +95,7 @@
                   <th scope="col">WIDTH</th>
                 </tr>
               </thead>
-              <tbody class="table-group-divider"></tbody>
-              <!-- <tbody class="table-group-divider">
+              <tbody class="table-group-divider">
                 <tr>
                   <td>WI-FI GUILHERME</td>
                   <td>-82</td>
@@ -127,7 +126,7 @@
                   <td>174</td>
                   <td>20</td>
                 </tr>
-              </tbody> -->
+              </tbody>
             </table>
           </div>
         </div>
@@ -155,6 +154,5 @@
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
       crossorigin="anonymous"
     ></script>
-    <script src="js/main.js" type="module"></script>
   </body>
 </html>
